<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d0000000">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="80dp"
        app:cardBackgroundColor="#f3f3f3"
        app:cardCornerRadius="16dp"
        app:cardElevation="0dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/f"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/psb"
                    android:text="Select a Club"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/f"
                    android:scrollbars="none">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:paddingBottom="16dp">

                        <RadioGroup
                            android:id="@+id/clubs"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <RadioButton
                                android:id="@+id/AppTeam"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:buttonTint="@color/black"
                                android:fontFamily="@font/ps"
                                android:text="@string/AppTeam"
                                android:textSize="15sp" />

                            <RadioButton
                                android:id="@+id/Pixonoids"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:buttonTint="@color/black"
                                android:fontFamily="@font/ps"
                                android:text="@string/Pixonoids"
                                android:textSize="15sp" />

                            <RadioButton
                                android:id="@+id/EnglishClub"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:buttonTint="@color/black"
                                android:fontFamily="@font/ps"
                                android:text="@string/EnglishClub"
                                android:textSize="15sp" />

                            <RadioButton
                                android:id="@+id/PublicRelations"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:buttonTint="@color/black"
                                android:fontFamily="@font/ps"
                                android:text="@string/PublicRelations"
                                android:textSize="15sp" />

                            <RadioButton
                                android:id="@+id/Dramatics"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:buttonTint="@color/black"
                                android:fontFamily="@font/ps"
                                android:text="@string/DramaticsClub"
                                android:textSize="15sp" />

                            <RadioButton
                                android:id="@+id/FashionParade"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:buttonTint="@color/black"
                                android:fontFamily="@font/ps"
                                android:text="@string/FashionParade"
                                android:textSize="15sp" />

                            <RadioButton
                                android:id="@+id/DisciplineClub"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:buttonTint="@color/black"
                                android:fontFamily="@font/ps"
                                android:text="@string/DisciplineClub"
                                android:textSize="15sp" />

                            <RadioButton
                                android:id="@+id/OrganizationClub"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:buttonTint="@color/black"
                                android:fontFamily="@font/ps"
                                android:text="@string/OrganizationClub"
                                android:textSize="15sp" />

                            <RadioButton
                                android:id="@+id/TechnicalClub"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:buttonTint="@color/black"
                                android:fontFamily="@font/ps"
                                android:text="@string/TechnicalClub"
                                android:textSize="15sp" />

                            <RadioButton
                                android:id="@+id/INSandControlClub"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:buttonTint="@color/black"
                                android:fontFamily="@font/ps"
                                android:text="@string/INSandControlClub"
                                android:textSize="15sp" />

                            <RadioButton
                                android:id="@+id/DesignandDecorationClub"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:buttonTint="@color/black"
                                android:fontFamily="@font/ps"
                                android:text="@string/DesignandDecorationClub"
                                android:textSize="15sp" />

                            <RadioButton
                                android:id="@+id/FineArtsClub"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:buttonTint="@color/black"
                                android:fontFamily="@font/ps"
                                android:text="@string/FineArtsClub"
                                android:textSize="15sp" />

                            <RadioButton
                                android:id="@+id/InformalsClub"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:buttonTint="@color/black"
                                android:fontFamily="@font/ps"
                                android:text="@string/InformalsClub"
                                android:textSize="15sp" />

                            <RadioButton
                                android:id="@+id/HindiClub"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:buttonTint="@color/black"
                                android:fontFamily="@font/ps"
                                android:text="@string/HindiClub"
                                android:textSize="15sp" />

                            <RadioButton
                                android:id="@+id/GoGreenClub"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:buttonTint="@color/black"
                                android:fontFamily="@font/ps"
                                android:text="@string/GoGreenClub"
                                android:textSize="15sp" />

                            <RadioButton
                                android:id="@+id/HumanValuesandEthicsCommittee"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:buttonTint="@color/black"
                                android:fontFamily="@font/ps"
                                android:text="@string/HumanValuesandEthicsCommittee"
                                android:textSize="15sp"/>

                            <RadioButton
                                android:id="@+id/MusicClub"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:buttonTint="@color/black"
                                android:fontFamily="@font/ps"
                                android:text="@string/MusicClub"
                                android:textSize="15sp" />

                            <RadioButton
                                android:id="@+id/DanceClub"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:buttonTint="@color/black"
                                android:fontFamily="@font/ps"
                                android:text="@string/DanceClub"
                                android:textSize="15sp" />


                            <RadioButton
                                android:id="@+id/TeamFinance"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:buttonTint="@color/black"
                                android:fontFamily="@font/ps"
                                android:text="@string/TeamFinance"
                                android:textSize="15sp" />
                        </RadioGroup>

                    </LinearLayout>

                </ScrollView>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_alignParentBottom="true"
                    android:background="@drawable/white_gradient"
                    android:elevation="4dp" />

            </RelativeLayout>


        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>